Adapt UIP2 plugins to current API

--- a/modules/ui_icons_patterns/tests/modules/ui_icons_patterns_test/components/button/button.component.yml
+++ b/modules/ui_icons_patterns/tests/modules/ui_icons_patterns_test/components/button/button.component.yml
@@ -6,10 +6,10 @@ props:
   type: object
   properties:
     icon1:
-      title: "Icon 1"
+      title: "Icon 1, with explicit typing"
       $ref: ui-patterns://icon
     icon2:
-      title: "Icon 2"
+      title: "Icon 2, with implicit typing"
       type: object
       properties:
         icon_pack: {type: "string"}
