feat(icon_pack): validate definition with json schema

--- a/ui_icons.services.yml
+++ b/ui_icons.services.yml
@@ -1,6 +1,8 @@
 services:
   plugin.manager.ui_icons_pack:
     class: Drupal\ui_icons\Plugin\IconPackManager
+    calls:
+      - [setValidator, []]
     arguments:
       [
         '@module_handler',
