--- a/modules/ui_icons_example/ui_icons_example.ui_icons.yml
+++ b/modules/ui_icons_example/ui_icons_example.ui_icons.yml
@@ -158,34 +158,32 @@ icon_pack_example_settings:
       title: "Alt text"
       type: "string"
       description: "Accessibility alternative text, leave empty for decorative icon."
-    select:
-      title: "Test select"
-      description: "Test for a select with enum property."
-      type: "integer"
-      enum: [100, 200, 300, 400, 500, 600, 700, 800, 900]
-      default: 400
+    # select:
+    #   title: "Test select"
+    #   description: "Test for a select with enum property."
+    #   type: "integer"
+    #   enum: [100, 200, 300, 400, 500, 600, 700, 800, 900]
+    #   default: 400
     boolean:
       title: "Test boolean"
       description: "Test for a boolean property."
       type: "boolean"
-    decimal:
-      title: "Test decimal"
-      description: "Test for a decimal property with default and step."
-      type: "number"
-      default: 66.66
-      multipleOf: 0.01
-    number:
-      title: "Test number min/max/step"
-      description: "Test for number with constraints."
-      type: "integer"
-      default: 30
-      minimum: 10
-      maximum: 100
-      multipleOf: 10
+    # decimal:
+    #   title: "Test decimal"
+    #   type: "number"
+    #   default: 66.66
+    #   multipleOf: 0.01
+    # number:
+    #   title: "Test number min/max/step"
+    #   description: "Test for number with constraints."
+    #   type: "integer"
+    #   default: 30
+    #   minimum: 10
+    #   maximum: 100
+    #   multipleOf: 10
 
 icon_pack_example_no_settings:
   label: Example no settings
-  description: Provide a single icon with no settings.
   extractor: path
   config:
     sources:
