Issue #3474092 by pdureau, mogtofu33: Remove IconDefinition::DEFAULT_TEMPLATE

--- a/modules/ui_icons_example/modules/ui_icons_dsfr/ui_icons_dsfr.ui_icons.yml
+++ b/modules/ui_icons_example/modules/ui_icons_dsfr/ui_icons_dsfr.ui_icons.yml
@@ -24,3 +24,5 @@ ui_icons_dsfr_svg:
       title: "Alt text"
       description: "Accessibility alternative text, leave empty for decorative icon."
       type: string
+  template: >
+    <img class="icon icon-{{ icon_id|clean_class }}" src="{{ source }}" title="{{ title|default(name) }}" alt="{{ alt|default(name) }}" width="{{ width|default(24) }}" height="{{ height|default(24) }}">
