--- a/modules/ui_icons_example/modules/ui_icons_icomoon/ui_icons_icomoon.ui_icons.yml
+++ b/modules/ui_icons_example/modules/ui_icons_icomoon/ui_icons_icomoon.ui_icons.yml
@@ -24,3 +24,5 @@ ui_icons_icomoon_svg:
       title: "Alt text"
       type: "string"
       description: "Accessibility alternative text, leave empty for decorative icon."
+  template: >
+    <img class="icon icon-{{ icon_id|clean_class }}" src="{{ source }}" title="{{ title|default(name) }}" alt="{{ alt|default(name) }}" width="{{ width|default(24) }}" height="{{ height|default(24) }}">
