--- a/modules/ui_icons_example/modules/ui_icons_feather/ui_icons_feather.ui_icons.yml
+++ b/modules/ui_icons_example/modules/ui_icons_feather/ui_icons_feather.ui_icons.yml
@@ -1,28 +1,23 @@
-ui_icons_feather_svg:
+feather_svg:
   label: Feather
   description: Feather icons from SVG sources.
+  links:
+   - https://feathericons.com/
+   - https://github.com/feathericons/feather?tab=readme-ov-file#svg-sprite  
   extractor: svg
   config:
     sources:
       - /libraries/feather/{icon_id}.svg
   settings:
-    width:
-      title: "Width"
-      description: "Set a width for this icon."
+    size:
+      title: "Size"
       type: "integer"
-      default: 32
-    height:
-      title: "Height"
-      description: "Set a height for this icon."
-      type: "integer"
-      default: 32
-    title:
-      title: "Title"
+      default: 24
+    color:
+      title: "Color"
       type: "string"
-      description: "Set a title on hover for this icon."
-    alt:
-      title: "Alt text"
-      type: "string"
-      description: "Accessibility alternative text, leave empty for decorative icon."
+      format: "color"
   template: >
-    <img class="icon icon-{{ icon_id|clean_class }}" src="{{ source }}" title="{{ title|default(name) }}" alt="{{ alt|default(name) }}" width="{{ width|default(24) }}" height="{{ height|default(24) }}">
+    <svg width="{{ size|default(24) }}" height="{{ size|default(24) }}" fill="none" stroke="{{ color|default('currentColor') }}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      {{ content }}
+    </svg>
