--- a/modules/ui_icons_example/modules/ui_icons_fontawesome/ui_icons_fontawesome.ui_icons.yml
+++ b/modules/ui_icons_example/modules/ui_icons_fontawesome/ui_icons_fontawesome.ui_icons.yml
@@ -1,28 +1,18 @@
-ui_icons_font_awesome_svg:
+font_awesome_svg:
   label: Font Awesome
   description: Font Awesome icons from SVG sources.
+  links:
+   - https://docs.fontawesome.com/web/add-icons/svg-bare
   extractor: svg
   config:
     sources:
       - /libraries/fontawesome/svgs/{group}/{icon_id}.svg
   settings:
-    width:
-      title: "Width"
-      description: "Set a width for this icon."
+    size:
+      title: "Size"
       type: "integer"
       default: 32
-    height:
-      title: "Height"
-      description: "Set a height for this icon."
-      type: "integer"
-      default: 32
-    title:
-      title: "Title"
-      type: "string"
-      description: "Set a title on hover for this icon."
-    alt:
-      title: "Alt text"
-      type: "string"
-      description: "Accessibility alternative text, leave empty for decorative icon."
   template: >
-    <img class="icon icon-{{ icon_id|clean_class }}" src="{{ source }}" title="{{ title|default(name) }}" alt="{{ alt|default(name) }}" width="{{ width|default(24) }}" height="{{ height|default(24) }}">
+    <svg xmlns="http://www.w3.org/2000/svg" class="icon" aria-hidden="true" focusable="false" viewBox="0 0 512 512" height="{{ size|default(32) }}" width="{{ size|default(32) }}">
+      {{ content }}
+    </svg>
