--- a/modules/ui_icons_example/modules/ui_icons_icomoon/ui_icons_icomoon.ui_icons.yml
+++ b/modules/ui_icons_example/modules/ui_icons_icomoon/ui_icons_icomoon.ui_icons.yml
@@ -1,28 +1,38 @@
-ui_icons_icomoon_svg:
-  label: IcoMoon
-  description: IcoMoon icons from SVG sources.
+icomoon_svg:
+  label: IcoMoon [SVG]
+  description: Personalize your designs.
+  links:
+   - https://icomoon.io/
   extractor: svg
   config:
     sources:
       - /libraries/icomoon/{group}/{icon_id}.svg
   settings:
-    width:
-      title: "Width"
-      description: "Set a width for this icon."
+    size:
+      title: "Size"
       type: "integer"
       default: 32
-    height:
-      title: "Height"
-      description: "Set a height for this icon."
-      type: "integer"
-      default: 32
-    title:
-      title: "Title"
-      type: "string"
-      description: "Set a title on hover for this icon."
-    alt:
-      title: "Alt text"
-      type: "string"
-      description: "Accessibility alternative text, leave empty for decorative icon."
   template: >
-    <img class="icon icon-{{ icon_id|clean_class }}" src="{{ source }}" title="{{ title|default(name) }}" alt="{{ alt|default(name) }}" width="{{ width|default(24) }}" height="{{ height|default(24) }}">
+    <svg class="{{ icon_id }}"  width="{{ size|default(32) }}" height="{{ size|default(32) }}">
+      {{ content }}
+    </svg>
+
+icomoon_sprite:
+  label: IcoMoon [Sprite]
+  description: Personalize your designs.
+  links:
+   - https://icomoon.io/
+   - https://icomoon.io/docs#inline-svg
+  extractor: svg_sprite
+  config:
+    sources:
+      - /libraries/icomoon/symbol-defs.svg
+  settings:
+    size:
+      title: "Size"
+      type: "integer"
+      default: 32
+  template: >
+    <svg class="{{ icon_id }}"  width="{{ size|default(32) }}" height="{{ size|default(32) }}">
+      <use xlink:href="{{ source }}#{{ icon_id }}"></use>
+    </svg>
