--- a/tests/modules/ui_icons_test/ui_icons_test.ui_icons.yml
+++ b/tests/modules/ui_icons_test/ui_icons_test.ui_icons.yml
@@ -4,12 +4,14 @@ test:
   links:
     - https://www.drupal.org/project/ui_icons
   version: 1.0.0
-  license: GPL-2.0-or-later
+  license: GPL-3.0-or-later
+  license_url: https://www.gnu.org/licenses/gpl-3.0.html
   extractor: path
   config:
     sources:
-      - icons/local_png/{icon_id}.png
-      - icons/local_png_group/{group}/{icon_id}.png
+      - icons/flat/*.png
+      - icons/group/{group}/*.png
+      - icons/group/*/{group}/*.png
   # For tests keep same name attribute as HTMl fore easier IconPluginTest.
   settings:
     width:
@@ -42,9 +44,10 @@ test_svg:
   extractor: svg
   config:
     sources:
-      - icons/local_svg/prefix_{icon_id}_suffix.svg
-      - icons/local_svg_group/{group}/{icon_id}.svg
-      - icons/local_svg_group/{group}/sub_group/{icon_id}.svg
+      - icons/flat/*.svg
+      - icons/group/{group}/*.svg
+      - icons/group/*/{group}/*.svg
+      - icons/prefix_suffix/prefix_{icon_id}_suffix.svg
   settings:
     size:
       title: "Size"
@@ -74,7 +77,7 @@ test_svg_sprite:
   extractor: svg_sprite
   config:
     sources:
-      - icons/sprite/{icon_id}.svg
+      - icons/sprite/foo_sprite.svg
   settings:
     width:
       title: "Width"
@@ -109,7 +112,7 @@ test_settings:
   extractor: path
   config:
     sources:
-      - icons/settings/{icon_id}.svg
+      - icons/settings/*.svg
   settings:
     width:
       title: "Width"
@@ -180,7 +183,7 @@ test_disabled:
   enabled: false
   config:
     sources:
-      - icons/local_png/{icon_id}.png
+      - icons/png/*.png
   settings:
     title:
       title: "Title"
@@ -199,7 +202,7 @@ test_no_icons:
   extractor: path
   config:
     sources:
-      - invalid_path/{icon_id}.png
+      - invalid_path/*.png
   settings:
     title:
       title: "Title"
@@ -218,7 +221,7 @@ test_no_settings:
   extractor: path
   config:
     sources:
-      - icons/no_settings/{icon_id}.svg
+      - icons/no_settings/*.svg
   template: >
     <img
       class="icon icon-{{ icon_id|clean_class }}"
